[tool.poetry]
name = "nonebot-plugin-matcher-block"
version = "0.2.0"
description = ""
authors = ["KarisAya <1048827424@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nonebot2 = "^2.4.0"
nonebot-adapter-onebot = "^2.4.6"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
